--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <h4 class="h4 service-item-title">Music</h4>
 
                 <p class="service-item-text">
-                  I love listening Pop, R&B music, and I played a little bit violin.
+                  I love listening to Pop, R&B music, and I played a little bit violin.
                 </p>
               </div>
 
